wordpress/wordpresMariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-prod
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress-prod
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - port: 3306
